# cpu_poem

./: Cargo.toml  LICENSE  README.md
src/: cioran.txt  index.css  index.html  index.mjs  main.rs
